# nxt-stack

./: .gitignore
corso_inv/: Makefile  mainpage.dox  manifest.xml
corso_inv/launch/: single_motor.launch  single_motor_controller.launch  univr_arm.launch  univr_base.launch
corso_inv/launch/modules/: nxt_arm.launch  nxt_base.launch  rviz_arm.launch  rviz_base.launch
corso_inv/yaml/: lego_single_motor.yaml
nxt_components/: Makefile  mainpage.dox  manifest.xml
nxt_univr_controllers/: Makefile  mainpage.dox  manifest.xml
nxt_univr_controllers/scripts/: univr_arm_controller.py  univr_base_position_controller.py  univr_base_velocity_controller.py  univr_controller_switch.py  univr_single_motor_controller.py
nxt_univr_sim/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
nxt_univr_sim/src/: univr_arm_sim.cpp
nxt_univr_state_publishers/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
nxt_univr_state_publishers/include/robot_state_publisher/: joint_state_listener.h
nxt_univr_state_publishers/src/: univr_arm_publisher.cpp  univr_base_publisher.cpp  univr_joint_states_aggregator.cpp  univr_odometry_publisher.cpp
